add network F, add an obstacle, add step 18-19, change mobility settings, add text

--- a/tutorials/visualization/omnetpp.ini
+++ b/tutorials/visualization/omnetpp.ini
@@ -56,10 +56,17 @@ description = Using 3D models for network nodes
 extends = Visualization04
 description = Displaying recent movement
 
+# common mobility parameters
+*.**.mobility.initFromDisplayString = false
+
 # pedestrians common initial parameters
 *.pedestrian*.mobilityType = "MassMobility"
-*.**.mobility.initialZ = 0.5m
-*.pedestrian*.mobility.initFromDisplayString = false
+*.pedestrian*.mobility.initialZ = 0.5m
+*.pedestrian*.mobility.constraintAreaMinZ = 0m
+*.pedestrian*.mobility.constraintAreaMaxZ = 1m
+*.pedestrian*.mobility.changeInterval = 0.5s
+*.pedestrian*.mobility.changeAngleBy = uniform(-10deg, 10deg)
+*.pedestrian*.mobility.speed = 1.3mps
 
 # pedestrian0 mobility parameters
 *.pedestrian0.mobility.initialX = 395m
@@ -73,15 +80,16 @@ description = Displaying recent movement
 *.pedestrian1.mobility.initialX = 600m
 *.pedestrian1.mobility.initialY = 90m
 *.pedestrian1.mobility.constraintAreaMinX = 595m
-*.pedestrian1.mobility.constraintAreaMinY = 85m
+*.pedestrian1.mobility.constraintAreaMinY = 90m
 *.pedestrian1.mobility.constraintAreaMaxX = 605m
 *.pedestrian1.mobility.constraintAreaMaxY = 230m
 
-# pedestrians common movement parameters
-*.pedestrian*.mobility.constraintAreaMaxZ = 1m
-*.pedestrian*.mobility.changeInterval = 0.5s
-*.pedestrian*.mobility.changeAngleBy = uniform(-10deg, 10deg)
-*.pedestrian*.mobility.speed = 2mps
+# accessPoint0 mobility parameters
+*.accessPoint0.mobilityType = "StationaryMobility" # default, can be omitted 
+*.accessPoint*.mobility.coordinateSystemModule = "coordinateSystem"
+*.accessPoint0.mobility.initialZ = 0.5m
+*.accessPoint0.mobility.initialLatitude = 42.3542933deg
+*.accessPoint0.mobility.initialLongitude = -71.0663985deg
 
 # mobility visualizer parameters
 *.visualizer.*.mobilityVisualizer.displayVelocity = true
@@ -191,29 +199,40 @@ network = VisualizationC
 # initialize pedestrianVideo position
 *.pedestrianVideo.mobilityType = "StationaryMobility"
 *.pedestrianVideo.mobility.initialX = 468m
-*.pedestrianVideo.mobility.initialY = 202m
+*.pedestrianVideo.mobility.initialY = 130m
+*.pedestrianVideo.mobility.initialZ = 0.5m
 
-*.router0.mobilityType = "StationaryMobility"
-*.router0.mobility.initialX = 511m
-*.router0.mobility.initialY = 234m
+# router0 mobility settings
+*.router*.mobilityType = "StationaryMobility"
+*.router*.mobility.coordinateSystemModule = "coordinateSystem"
+*.router*.mobility.initialZ = 0.5m
+*.router0.mobility.initialLatitude = 42.35433deg
+*.router0.mobility.initialLongitude = -71.06550deg
 
-*.server0.mobilityType = "StationaryMobility"
-*.server0.mobility.initialX = 443m
-*.server0.mobility.initialY = 405m
+#*.switch0.mobilityType = "StationaryMobility"
+#*.switch0.mobility.initialX = 416m
+#*.switch0.mobility.initialY = 327m
 
-# server application parameters
-*.server0.numUdpApps = 1
-*.server0.udpApp[0].typename = "UDPVideoStreamSvr"
-*.server0.udpApp[0].localPort = 4000
-*.server0.udpApp[0].sendInterval = exponential(1ms)
-*.server0.udpApp[0].packetLen = 1000B
-*.server0.udpApp[0].videoSize = 800000000B
+#videoStreamServer mobility settings
+*.videoStreamServer.mobilityType = "StationaryMobility"
+*.videoStreamServer.mobility.coordinateSystemModule = "coordinateSystem"
+*.*Server*.mobility.initialZ = 0.5m
+*.videoStreamServer.mobility.initialLatitude = 42.3554005deg
+*.videoStreamServer.mobility.initialLongitude = -71.0637636deg
+
+# videoStreamServer application settings
+*.videoStreamServer.numUdpApps = 1
+*.videoStreamServer.udpApp[0].typename = "UDPVideoStreamSvr"
+*.videoStreamServer.udpApp[0].localPort = 4000
+*.videoStreamServer.udpApp[0].sendInterval = exponential(1ms)
+*.videoStreamServer.udpApp[0].packetLen = 1000B
+*.videoStreamServer.udpApp[0].videoSize = 800000000B
 
 # client application parameters
 *.pedestrianVideo.numUdpApps = 1
 *.pedestrianVideo.udpApp[0].typename = "UDPVideoStreamCli"
 *.pedestrianVideo.udpApp[0].localPort = 4000
-*.pedestrianVideo.udpApp[0].serverAddress = "server0"
+*.pedestrianVideo.udpApp[0].serverAddress = "videoStreamServer"
 *.pedestrianVideo.udpApp[0].serverPort = 4000
 
 # turn off data link visualizer
@@ -242,16 +261,14 @@ extends = Visualization14
 description = Showing active network routes
 network = VisualizationD
 
-# access points settings
+# accessPoint1 settings
 *.accessPoint1.wlan[*].radio.transmitter.power = 1mW
-*.accessPoint1.mobilityType = "StationaryMobility"
 *.accessPoint1.mobility.initialX = 630m
 *.accessPoint1.mobility.initialY = 205m
 
-# router settings
-*.router0.mobilityType = "StationaryMobility"
-*.router0.mobility.initialX = 616m
-*.router0.mobility.initialY = 244m
+# router1 mobility settings
+*.router1.mobility.initialX = 616m
+*.router1.mobility.initialY = 244m
 
 # pedestrian1 mobility parameters. Change because of access points placing
 *.pedestrian1.mobility.initialX = 630m
@@ -287,6 +304,12 @@ network = VisualizationE
 
 # physical environment parameters
 *.physicalEnvironment.coordinateSystemModule = "coordinateSystem"
+*.physicalEnvironment.spaceMinX = 0m
+*.physicalEnvironment.spaceMinY = 0m
+*.physicalEnvironment.spaceMinZ = 0m
+*.physicalEnvironment.spaceMaxX = 700m
+*.physicalEnvironment.spaceMaxY = 700m
+*.physicalEnvironment.spaceMaxZ = 100m
 *.physicalEnvironment.config = xmldoc("obstacle.xml")
 
 
@@ -295,5 +318,47 @@ extends = Visualization16
 description = Displaying obstacle loss
 
 # visualizer parameters
-*.visualizer.*.obstacleLossVisualizer.displayIntersectionTrail = true # enables displaying intersections between physical objects and primary propagation path
-*.visualizer.*.obstacleLossVisualizer.displayFaceNormalVectorTrail = true # enables displaying face normal vectors for physical objects at intersections
+*.visualizer.*.obstacleLossVisualizer.displayIntersectionTrail = true
+*.visualizer.*.obstacleLossVisualizer.displayFaceNormalVectorTrail = true
+
+
+[Config Visualization18]
+extends = Visualization17
+description = Showing packet drops
+
+# visualizer parameters
+*.visualizer.*.packetDropVisualizer.packetNameFilter = "*"
+
+
+[Config Visualization19]
+extends = Visualization18
+description = Displaying transport connections
+network = VisualizationF
+
+# car appearance
+*.car[*].osgModel = "car.osgb.20.scale"
+*.car[*].osgModelColor = "#CB4154"
+
+# car wlan communication range parameter
+*.car[*].wlan[*].radio.transmitter.power = 0.7mW
+
+# car mobility parameters
+*.car[*].mobilityType = "VehicleMobility"
+*.car[*].mobility.updateInterval = 100ms
+*.car[0].mobility.waypointFile = "waypoint1.txt"
+*.car[1].mobility.waypointFile = "waypoint2.txt"
+*.car[*].mobility.waypointProximity = 4m
+*.car[*].mobility.speed = 12mps
+
+# accessPoint2 mobility
+*.accessPoint2.mobility.initialLatitude = 42.357007deg
+*.accessPoint2.mobility.initialLongitude = -71.0657737deg
+
+# accessPoint2 wlan
+*.accessPoint2.wlan[*].radio.transmitter.power = 1mW
+
+# router2 mobility
+*.router2.mobility.initialLatitude = 42.3554667deg
+*.router2.mobility.initialLongitude = -71.0664122deg
+
+
