--- a/examples/inet/udpclientserver/omnetpp.ini
+++ b/examples/inet/udpclientserver/omnetpp.ini
@@ -60,7 +60,7 @@ description = "UDP Destination Port Unavailable"
 [Config udp_Host_Unav_ipv4]
 extends = _ipv4
 description = "UDP Destination Host Unavailable"
-**.client*.app[0].destAddresses = "server2"
+**.client*.app[0].destAddresses = "unavserver"
 **.client*.app[0].destPort = 1001
 
 [Config udp_OK_ipv6]
@@ -78,7 +78,7 @@ description = "UDP Destination Port Unavailable"
 [Config udp_Host_Unav_ipv6]
 extends = _ipv6
 description = "UDP Destination Host Unavailable"
-**.client*.app[0].destAddresses = "server2(ipv6)"
+**.client*.app[0].destAddresses = "unavserver(ipv6)"
 **.client*.app[0].destPort = 1001
 
 [Config udp_OK_gn]
@@ -96,6 +96,6 @@ description = "UDP Destination Port Unavailable"
 [Config udp_Host_Unav_gn]
 extends = _gn
 description = "UDP Destination Host Unavailable"
-**.client*.app[0].destAddresses = "server2(modulepath)"
+**.client*.app[0].destAddresses = "unavserver(modulepath)"
 **.client*.app[0].destPort = 1001
 
