update TODO files, add network F, correct obstacle coordinates, add steps 20-21, update steps, update text

--- a/tutorials/visualization/omnetpp.ini
+++ b/tutorials/visualization/omnetpp.ini
@@ -4,7 +4,7 @@ debug-on-errors = true
 record-eventlog = true
 
 
-[Config Visualization01]
+[Config Visualization01]	# Showing Boston downtown
 description = Showing Boston downtown
 network = VisualizationA
 
@@ -23,13 +23,13 @@ network = VisualizationA
 *.visualizer.osgVisualizer.sceneVisualizer.axisLength = 100m
 
 
-#[Config Visualization02]	#dependency
+#[Config Visualization02]	# Adding static 3D objects to the scene	# under construction
 #extends = Visualization01
 #description = Adding static 3D objects to the scene
 #########################
 
 
-[Config Visualization03]
+[Config Visualization03]	# Displaying communiation/interference range
 extends = Visualization01		#TODO: if Visualization02 became active change Visualization01 to Visualization02
 description = Displaying communication & interference range
 network = VisualizationB
@@ -43,7 +43,7 @@ network = VisualizationB
 *.visualizer.*.mediumVisualizer.displayInterferenceRanges = true
 
 
-[Config Visualization04]
+[Config Visualization04]	# Using 3D models for network nodes
 extends = Visualization03
 description = Using 3D models for network nodes
 
@@ -52,7 +52,7 @@ description = Using 3D models for network nodes
 *.pedestrian1.osgModel = "boxman.osgb.(0.06).scale.0,0,90.rot"
 
 
-[Config Visualization05]
+[Config Visualization05]	# Displaying recent movement and orientation
 extends = Visualization04
 description = Displaying recent movement
 
@@ -85,7 +85,7 @@ description = Displaying recent movement
 *.pedestrian1.mobility.constraintAreaMaxY = 230m
 
 # accessPoint0 mobility parameters
-*.accessPoint0.mobilityType = "StationaryMobility" # default, can be omitted 
+*.accessPoint*.mobilityType = "StationaryMobility" # default, can be omitted 
 *.accessPoint*.mobility.coordinateSystemModule = "coordinateSystem"
 *.accessPoint0.mobility.initialZ = 0.5m
 *.accessPoint0.mobility.initialLatitude = 42.3542933deg
@@ -94,66 +94,98 @@ description = Displaying recent movement
 # mobility visualizer parameters
 *.visualizer.*.mobilityVisualizer.displayVelocity = true
 *.visualizer.*.mobilityVisualizer.displayMovementTrail = true
-################
-# Review 1
 
 
-[Config Visualization06]
+[Config Visualization06]	# Showing IP addresses
 extends = Visualization05
 description = Showing IP addresses
 
-# interface table visualizer parameters
+# interface table visualizer: shows pedestrians' wlan ip addresses
 *.visualizer.*.interfaceTableVisualizer.nodeFilter = "*.pedestrian*"
 *.visualizer.*.interfaceTableVisualizer.interfaceFilter = "wlan*"
 
 
-[Config Visualization07]
+[Config Visualization07]	# Showing wifi association
 extends = Visualization06
 description = Showing wifi association
 
-# interface table visualizer parameters must turn off, because they're overlapping
+# turn off interface table visualizer
 *.visualizer.*.interfaceTableVisualizer.nodeFilter = ""
 
-# ieee802.11 visualizer parameters
+# ieee802.11 visualizer parameter
 *.visualizer.*.ieee80211Visualizer.nodeFilter = "**"
 
 
-[Config Visualization08]
+[Config Visualization08a]	# Displaying transmissions & receptions
 extends = Visualization07
-description = Displaying transmissions & receptions
+description = Displaying transmissions & receptions, association off
 
 # voip application parameters
 *.pedestrian*.numUdpApps = 1
 
+# voip sender
 *.pedestrian0.udpApp[0].typename = "SimpleVoIPSender"
 *.pedestrian0.udpApp[0].destAddress = "pedestrian1"
 *.pedestrian0.udpApp[0].localPort = 5000
 *.pedestrian0.udpApp[0].destPort = 5000
+# can be changed or can be omitted
+*.pedestrian0.udpApp[0].startTime = 1s
+*.pedestrian0.udpApp[0].stopTime = 31s
 
+# voip receiver
 *.pedestrian1.udpApp[0].typename = "SimpleVoIPReceiver"
 *.pedestrian1.udpApp[0].localPort = 5000
 
+# turn off ieee802.11 visualizer parameter???
+*.visualizer.*.ieee80211Visualizer.nodeFilter = ""
 
-# medium visualizer parameters
+# medium visualizer parameters: display transmissions and receptions
 *.visualizer.*.mediumVisualizer.displayTransmissions = true
 *.visualizer.*.mediumVisualizer.displayReceptions = true
 *.visualizer.*.mediumVisualizer.transmissionImage = "transmission.png"
 *.visualizer.*.mediumVisualizer.receptionImage = "reception.png"
 
 
-[Config Visualization09]
-extends = Visualization08
+[Config Visualization08b]	# Displaying transmissions & receptions
+extends = Visualization07
+description = Displaying transmissions & receptions, association on
+
+# voip application parameters
+*.pedestrian*.numUdpApps = 1
+
+# voip sender
+*.pedestrian0.udpApp[0].typename = "SimpleVoIPSender"
+*.pedestrian0.udpApp[0].destAddress = "pedestrian1"
+*.pedestrian0.udpApp[0].localPort = 5000
+*.pedestrian0.udpApp[0].destPort = 5000
+# can be changed or can be omitted
+*.pedestrian0.udpApp[0].startTime = 1s
+*.pedestrian0.udpApp[0].stopTime = 31s
+
+# voip receiver
+*.pedestrian1.udpApp[0].typename = "SimpleVoIPReceiver"
+*.pedestrian1.udpApp[0].localPort = 5000
+
+# medium visualizer parameters: display transmissions and receptions
+*.visualizer.*.mediumVisualizer.displayTransmissions = true
+*.visualizer.*.mediumVisualizer.displayReceptions = true
+*.visualizer.*.mediumVisualizer.transmissionImage = "transmission.png"
+*.visualizer.*.mediumVisualizer.receptionImage = "reception.png"
+
+
+[Config Visualization09]	# Showing propagating signals
+extends = Visualization08a
 description = Showing propagating signals
 
-# medium visualizer parameter
+# medium visualizer parameters
 *.visualizer.*.mediumVisualizer.displaySignals = true
-*.visualizer.*.mediumVisualizer.signalPropagationUpdateInterval = 25ns
+*.visualizer.*.mediumVisualizer.signalPropagationUpdateInterval = 50ns
 #*.visualizer.osgVisualizer.mediumVisualizer.signalShape = "ring"
 #*.visualizer.osgVisualizer.mediumVisualizer.signalShape = "sphere"
 *.visualizer.osgVisualizer.mediumVisualizer.signalShape = "both"
 
 
-[Config Visualization10]
+[Config Visualization10]	# Showing active physical links
 extends = Visualization09
 description = Showing active physical links
 
@@ -161,25 +193,22 @@ description = Showing active physical links
 *.visualizer.*.physicalLinkVisualizer.packetNameFilter = "*"
 
 
-[Config Visualization11]
+[Config Visualization11]	# Showing active data links
 extends = Visualization10
 description = Showing active data links
 
 # turn off physical links
 *.visualizer.*.physicalLinkVisualizer.packetNameFilter = ""
 
-# turn on data links
+# turn on VoIP data links
 *.visualizer.*.dataLinkVisualizer.packetNameFilter = "*VoIP*"
 
 
-[Config Visualization12]
+[Config Visualization12]	# Displaying throughput statistic
 extends = Visualization11
 description = Displaying throughput statistics
 
-# turn off association info
-*.visualizer.*.infoVisualizer.modules = ""
-
-# statistic visualizer parameters
+# statistic visualizer parameters. Should change
 *.visualizer.*.statisticVisualizer.signalName = "VoIPPacketLossRate"
 *.visualizer.*.statisticVisualizer.statisticName = "packetLossRate"
 *.visualizer.*.statisticVisualizer.prefix = "Packet loss"
@@ -187,23 +216,27 @@ description = Displaying throughput statistics
 *.visualizer.*.statisticVisualizer.sourcePathFilter = "**.udpApp[0]"
 
 
-#########
-[Config Visualization13]
+[Config Visualization13]	# Showing configured routing tables
 extends = Visualization12
 description = Showing routing tables
 network = VisualizationC
 
-# add pedestrianVideo
+# pedestrianVideo wlan parameter
 *.pedestrianVideo.wlan[*].radio.transmitter.power = 0.7mW
 
 # initialize pedestrianVideo position
 *.pedestrianVideo.mobilityType = "StationaryMobility"
 *.pedestrianVideo.mobility.initialX = 468m
 *.pedestrianVideo.mobility.initialY = 130m
-*.pedestrianVideo.mobility.initialZ = 0.5m
+#*.pedestrianVideo.mobility.initialZ = 0.5m
 
 # router0 mobility settings
-*.router*.mobilityType = "StationaryMobility"
+*.router*.mobilityType = "StationaryMobility"#*.car[*].numUdpApps = 1
+*.car[*].udpApp[0].typename = "UDPVideoStreamCli"
+*.car[*].udpApp[0].localPort = 4000
+*.car[*].udpApp[0].serverAddress = "videoStreamServer"
+*.car[*].udpApp[0].serverPort = 4000
+
 *.router*.mobility.coordinateSystemModule = "coordinateSystem"
 *.router*.mobility.initialZ = 0.5m
 *.router0.mobility.initialLatitude = 42.35433deg
@@ -226,7 +259,7 @@ network = VisualizationC
 *.videoStreamServer.udpApp[0].localPort = 4000
 *.videoStreamServer.udpApp[0].sendInterval = exponential(1ms)
 *.videoStreamServer.udpApp[0].packetLen = 1000B
-*.videoStreamServer.udpApp[0].videoSize = 800000000B
+*.videoStreamServer.udpApp[0].videoSize = 50000000B
 
 # client application parameters
 *.pedestrianVideo.numUdpApps = 1
@@ -234,16 +267,18 @@ network = VisualizationC
 *.pedestrianVideo.udpApp[0].localPort = 4000
 *.pedestrianVideo.udpApp[0].serverAddress = "videoStreamServer"
 *.pedestrianVideo.udpApp[0].serverPort = 4000
+# can be changed or can be omitted
+*.pedestrianVideo.udpApp[0].startTime = 10s
 
-# turn off data link visualizer
-*.visualizer.*.dataLinkVisualizer.packetNameFilter = ""
+# routing table visualizer: router0 all routing table entries
+*.visualizer.*.routingTableVisualizer.subscriptionModule = "router0"
+*.visualizer.*.routingTableVisualizer.destinationFilter = "**"
 
-# routing table visualizer
-#*.visualizer.*.routingTableVisualizer.subscriptionModule = ""
-*.visualizer.*.routingTableVisualizer.destinationFilter = "*.pedestrianVideo"
+# turn on Videostream data links
+*.visualizer.*.dataLinkVisualizer.packetNameFilter = "*Video*"
 
 
-[Config Visualization14]
+[Config Visualization14]	# Displaying 802.11 channel access state
 extends = Visualization13
 description = Displaying 802.11 channel access state
 
@@ -251,26 +286,26 @@ description = Displaying 802.11 channel access state
 *.visualizer.*.statisticVisualizer.signalName = ""
 *.visualizer.*.statisticVisualizer.statisticName = ""
 
-# info visualizer parameters
+# info visualizer parameters: shows channel access state
 *.visualizer.*.infoVisualizer.modules = "*.*.wlan[0].mac.ctn[0]"
 *.visualizer.*.infoVisualizer.content = "displayStringText"
 
 
-[Config Visualization15]
+[Config Visualization15a]	# Showing active network routes		# under construction: I need network route visualizer
 extends = Visualization14
 description = Showing active network routes
 network = VisualizationD
 
 # accessPoint1 settings
 *.accessPoint1.wlan[*].radio.transmitter.power = 1mW
-*.accessPoint1.mobility.initialX = 630m
-*.accessPoint1.mobility.initialY = 205m
+*.accessPoint1.mobility.initialLatitude = 42.35324deg
+*.accessPoint1.mobility.initialLongitude = -71.06530deg
 
 # router1 mobility settings
-*.router1.mobility.initialX = 616m
-*.router1.mobility.initialY = 244m
+*.router1.mobility.initialLatitude = 42.35351deg
+*.router1.mobility.initialLongitude = -71.06486deg
 
-# pedestrian1 mobility parameters. Change because of access points placing
+# pedestrian1 mobility parameters. Changed because we placed a new access point
 *.pedestrian1.mobility.initialX = 630m
 *.pedestrian1.mobility.initialY = 90m
 *.pedestrian1.mobility.constraintAreaMinX = 625m
@@ -278,18 +313,22 @@ network = VisualizationD
 *.pedestrian1.mobility.constraintAreaMaxX = 635m
 *.pedestrian1.mobility.constraintAreaMaxY = 230m
 
+# wifi parameters
+*.accessPoint0.wlan[0].mgmt.ssid = "inetwifi0"
+*.accessPoint1.wlan[0].mgmt.ssid = "inetwifi1"
+*.pedestrian0.wlan[0].agent.default_ssid = "inetwifi0"
+*.pedestrianVideo.wlan[0].agent.default_ssid = "inetwifi0"
+*.pedestrian1.wlan[0].agent.default_ssid = "inetwifi1"
 
-#*.visualizer.*.routingTableVisualizer.subscriptionModule = ""
+# turn off routing table
+*.visualizer.*.routingTableVisualizer.subscriptionModule = ""
 *.visualizer.*.routingTableVisualizer.destinationFilter = ""
 
-# wifi parameters
-*.accessPoint0.wlan[0].mgmt.ssid = "inet"
-*.accessPoint1.wlan[0].mgmt.ssid = "omnet"
-*.pedestrian0.wlan[0].agent.default_ssid = "inet"
-*.pedestrianVideo.wlan[0].agent.default_ssid = "inet"
-*.pedestrian1.wlan[0].agent.default_ssid = "omnet"
+# turn off ranges
+*.visualizer.*.mediumVisualizer.displayCommunicationRanges = true
+*.visualizer.*.mediumVisualizer.displayInterferenceRanges = true
 
-# should showing the difference between dataLink and route
+# Show the difference between dataLink and route?
 #*.visualizer.*.dataLinkVisualizer.packetNameFilter = "*VoIP*"
 
 # network route visualizer
@@ -297,8 +336,49 @@ network = VisualizationD
 #*.visualizer.*.routeVisualizer.packetNameFilter = "*VoIP*"
 
 
-[Config Visualization16]
-extends = Visualization15
+[Config Visualization15b]	# Showing active network routes		# under construction: I need network route visualizer
+extends = Visualization14
+description = Showing active network routes
+network = VisualizationD
+
+# accessPoint1 settings
+*.accessPoint1.wlan[*].radio.transmitter.power = 1mW
+*.accessPoint1.mobility.initialLatitude = 42.35324deg
+*.accessPoint1.mobility.initialLongitude = -71.06530deg
+
+# router1 mobility settings
+*.router1.mobility.initialLatitude = 42.35351deg
+*.router1.mobility.initialLongitude = -71.06486deg
+
+# pedestrian1 mobility parameters. Changed because we placed a new access point
+*.pedestrian1.mobility.initialX = 630m
+*.pedestrian1.mobility.initialY = 90m
+*.pedestrian1.mobility.constraintAreaMinX = 625m
+*.pedestrian1.mobility.constraintAreaMinY = 85m
+*.pedestrian1.mobility.constraintAreaMaxX = 635m
+*.pedestrian1.mobility.constraintAreaMaxY = 230m
+
+# wifi parameters
+*.accessPoint0.wlan[0].mgmt.ssid = "inetwifi0"
+*.accessPoint1.wlan[0].mgmt.ssid = "inetwifi1"
+*.pedestrian0.wlan[0].agent.default_ssid = "inetwifi0"
+*.pedestrianVideo.wlan[0].agent.default_ssid = "inetwifi0"
+*.pedestrian1.wlan[0].agent.default_ssid = "inetwifi1"
+
+# turn off routing table
+*.visualizer.*.routingTableVisualizer.subscriptionModule = ""
+*.visualizer.*.routingTableVisualizer.destinationFilter = ""
+
+# Show the difference between dataLink and route?
+#*.visualizer.*.dataLinkVisualizer.packetNameFilter = "*VoIP*"
+
+# network route visualizer
+#*.visualizer.*.routeVisualizer.subscriptionModule = "**"
+#*.visualizer.*.routeVisualizer.packetNameFilter = "*VoIP*"
+
+
+[Config Visualization16]	# Displaying physical environment
+extends = Visualization15a
 description = Displaying physical environment
 network = VisualizationE
 
@@ -313,24 +393,24 @@ network = VisualizationE
 *.physicalEnvironment.config = xmldoc("obstacle.xml")
 
 
-[Config Visualization17]
+[Config Visualization17]	# Displaying obstacle loss			# under construction: signal doesn't conflict obstacles
 extends = Visualization16
 description = Displaying obstacle loss
 
-# visualizer parameters
+# visualizer parameters: shows obstacle loss
 *.visualizer.*.obstacleLossVisualizer.displayIntersectionTrail = true
 *.visualizer.*.obstacleLossVisualizer.displayFaceNormalVectorTrail = true
 
 
-[Config Visualization18]
+[Config Visualization18]	# Showing packet drops
 extends = Visualization17
 description = Showing packet drops
 
 # visualizer parameters
-*.visualizer.*.packetDropVisualizer.packetNameFilter = "*"
+*.visualizer.*.packetDropVisualizer.packetNameFilter = "**"
 
 
-[Config Visualization19]
+[Config Visualization19]	# Displaying transport connections	# under construction: need tcp connection?
 extends = Visualization18
 description = Displaying transport connections
 network = VisualizationF
@@ -344,21 +424,74 @@ network = VisualizationF
 
 # car mobility parameters
 *.car[*].mobilityType = "VehicleMobility"
+*.car[*].mobility.coordinateSystemModule = "coordinateSystem"
 *.car[*].mobility.updateInterval = 100ms
 *.car[0].mobility.waypointFile = "waypoint1.txt"
 *.car[1].mobility.waypointFile = "waypoint2.txt"
 *.car[*].mobility.waypointProximity = 4m
 *.car[*].mobility.speed = 12mps
 
-# accessPoint2 mobility
+# car video stream settings
+*.car[*].numUdpApps = 1
+*.car[*].udpApp[0].typename = "UDPVideoStreamCli"
+*.car[*].udpApp[0].localPort = 4000
+*.car[*].udpApp[0].serverAddress = "videoStreamServer"
+*.car[*].udpApp[0].serverPort = 4000
+*.car[*].wlan[0].agent.default_ssid = "inetwifi2"
+
+# accessPoint2 mobility & wlan
 *.accessPoint2.mobility.initialLatitude = 42.357007deg
 *.accessPoint2.mobility.initialLongitude = -71.0657737deg
-
-# accessPoint2 wlan
 *.accessPoint2.wlan[*].radio.transmitter.power = 1mW
+#*.accessPoint2.wlan[0].mgmt.ssid = "inetwifi2"
 
 # router2 mobility
 *.router2.mobility.initialLatitude = 42.3554667deg
 *.router2.mobility.initialLongitude = -71.0664122deg
+
+# accessPoint3 mobility & wlan
+*.accessPoint3.mobility.initialLatitude = 42.35617deg
+*.accessPoint3.mobility.initialLongitude = -71.06894deg
+*.accessPoint3.wlan[*].radio.transmitter.power = 1mW
+#*.accessPoint3.wlan[0].mgmt.ssid = "inetwifi3"
+
+#-------------------------------------------------------------------
+# tcp hosts mobility and tcp application settings
+*.tcpHost[*].mobilityType = "StationaryMobility"
+*.tcpHost[*].mobility.coordinateSystemModule = "coordinateSystem"
+*.tcpHost[0].mobility.initialLatitude = 42.35292deg
+*.tcpHost[0].mobility.initialLongitude = -71.06473deg
+*.tcpHost[1].mobility.initialLatitude = 42.35332deg
+*.tcpHost[1].mobility.initialLongitude = -71.06455deg
+
+#-------------------------------------------------------------------
+
+# turn off showing wifi association
+#*.visualizer.*.ieee80211Visualizer.nodeFilter = ""
+
+# turn off medium visualizer parameters
+*.visualizer.*.mediumVisualizer.displaySignals = false
+*.visualizer.*.mediumVisualizer.signalPropagationUpdateInterval = 0s
+
+# info visualizer parameters: shows channel access state
+*.visualizer.*.infoVisualizer.modules = ""
+
+# visualizer parameters
+*.visualizer.*.transportConnectionVisualizer.nodeFilter = "**"
+
+# ieee802.11 visualizer parameter
+*.visualizer.*.ieee80211Visualizer.nodeFilter = "**"
+
+[Config Visualization20]	# Showing link breaks
+extends = Visualization19
+description = Showing link breaks
+
+# visualizer parameters
+*.visualizer.*.linkBreakVisualizer.nodeFilter = "**"
+
+
+[Config Visualization21]	# Visualizing handovers
+extends = Visualization20
+description = Visualizing handovers
 
 
