update TODO_ME, add tcpHost to the network, update step 17-20, add text to step 17-21, edit waypoint1

--- a/tutorials/visualization/omnetpp.ini
+++ b/tutorials/visualization/omnetpp.ini
@@ -23,14 +23,14 @@ network = VisualizationA
 *.visualizer.osgVisualizer.sceneVisualizer.axisLength = 100m
 
 
-#[Config Visualization02]	# Adding static 3D objects to the scene	# under construction
-#extends = Visualization01
-#description = Adding static 3D objects to the scene
+[Config Visualization02]	# Adding static 3D objects to the scene	# under construction
+extends = Visualization01
+description = Adding static 3D objects to the scene
 #########################
 
 
 [Config Visualization03]	# Displaying communiation/interference range
-extends = Visualization01		#TODO: if Visualization02 became active change Visualization01 to Visualization02
+extends = Visualization02		#TODO: if Visualization02 became active change Visualization01 to Visualization02
 description = Displaying communication & interference range
 network = VisualizationB
 
@@ -71,8 +71,8 @@ description = Displaying recent movement
 # pedestrian0 mobility parameters
 *.pedestrian0.mobility.initialX = 395m
 *.pedestrian0.mobility.initialY = 63m
-*.pedestrian0.mobility.constraintAreaMinX = 390m
-*.pedestrian0.mobility.constraintAreaMinY = 63m
+*.pedestrian0.mobility.constraintAreaMinX = 385m
+*.pedestrian0.mobility.constraintAreaMinY = 60m
 *.pedestrian0.mobility.constraintAreaMaxX = 400m
 *.pedestrian0.mobility.constraintAreaMaxY = 230m
 
@@ -85,11 +85,11 @@ description = Displaying recent movement
 *.pedestrian1.mobility.constraintAreaMaxY = 230m
 
 # accessPoint0 mobility parameters
-*.accessPoint*.mobilityType = "StationaryMobility" # default, can be omitted 
+*.accessPoint*.mobilityType = "StationaryMobility"		# default, can be omitted 
 *.accessPoint*.mobility.coordinateSystemModule = "coordinateSystem"
-*.accessPoint0.mobility.initialZ = 0.5m
 *.accessPoint0.mobility.initialLatitude = 42.3542933deg
 *.accessPoint0.mobility.initialLongitude = -71.0663985deg
+*.accessPoint*.mobility.initialAltitude = 0.5m
 
 # mobility visualizer parameters
 *.visualizer.*.mobilityVisualizer.displayVelocity = true
@@ -121,7 +121,8 @@ extends = Visualization07
 description = Displaying transmissions & receptions, association off
 
 # voip application parameters
-*.pedestrian*.numUdpApps = 1
+*.pedestrian0.numUdpApps = 1
+*.pedestrian1.numUdpApps = 1
 
 # voip sender
 *.pedestrian0.udpApp[0].typename = "SimpleVoIPSender"
@@ -158,6 +159,7 @@ description = Displaying transmissions & receptions, association on
 *.pedestrian0.udpApp[0].destAddress = "pedestrian1"
 *.pedestrian0.udpApp[0].localPort = 5000
 *.pedestrian0.udpApp[0].destPort = 5000
+
 # can be changed or can be omitted
 *.pedestrian0.udpApp[0].startTime = 1s
 *.pedestrian0.udpApp[0].stopTime = 31s
@@ -228,36 +230,26 @@ network = VisualizationC
 *.pedestrianVideo.mobilityType = "StationaryMobility"
 *.pedestrianVideo.mobility.initialX = 468m
 *.pedestrianVideo.mobility.initialY = 130m
-#*.pedestrianVideo.mobility.initialZ = 0.5m
 
 # router0 mobility settings
-*.router*.mobilityType = "StationaryMobility"#*.car[*].numUdpApps = 1
-*.car[*].udpApp[0].typename = "UDPVideoStreamCli"
-*.car[*].udpApp[0].localPort = 4000
-*.car[*].udpApp[0].serverAddress = "videoStreamServer"
-*.car[*].udpApp[0].serverPort = 4000
-
+*.router*.mobilityType = "StationaryMobility"
 *.router*.mobility.coordinateSystemModule = "coordinateSystem"
-*.router*.mobility.initialZ = 0.5m
 *.router0.mobility.initialLatitude = 42.35433deg
 *.router0.mobility.initialLongitude = -71.06550deg
-
-#*.switch0.mobilityType = "StationaryMobility"
-#*.switch0.mobility.initialX = 416m
-#*.switch0.mobility.initialY = 327m
+*.router*.mobility.initialAltitude = 0.5m
 
 #videoStreamServer mobility settings
 *.videoStreamServer.mobilityType = "StationaryMobility"
 *.videoStreamServer.mobility.coordinateSystemModule = "coordinateSystem"
-*.*Server*.mobility.initialZ = 0.5m
 *.videoStreamServer.mobility.initialLatitude = 42.3554005deg
 *.videoStreamServer.mobility.initialLongitude = -71.0637636deg
+*.*Server.mobility.initialAltitude = 0.5m
 
 # videoStreamServer application settings
 *.videoStreamServer.numUdpApps = 1
 *.videoStreamServer.udpApp[0].typename = "UDPVideoStreamSvr"
 *.videoStreamServer.udpApp[0].localPort = 4000
-*.videoStreamServer.udpApp[0].sendInterval = exponential(1ms)
+*.videoStreamServer.udpApp[0].sendInterval = exponential(5ms)
 *.videoStreamServer.udpApp[0].packetLen = 1000B
 *.videoStreamServer.udpApp[0].videoSize = 50000000B
 
@@ -268,7 +260,7 @@ network = VisualizationC
 *.pedestrianVideo.udpApp[0].serverAddress = "videoStreamServer"
 *.pedestrianVideo.udpApp[0].serverPort = 4000
 # can be changed or can be omitted
-*.pedestrianVideo.udpApp[0].startTime = 10s
+*.pedestrianVideo.udpApp[0].startTime = 15s
 
 # routing table visualizer: router0 all routing table entries
 *.visualizer.*.routingTableVisualizer.subscriptionModule = "router0"
@@ -325,8 +317,8 @@ network = VisualizationD
 *.visualizer.*.routingTableVisualizer.destinationFilter = ""
 
 # turn off ranges
-*.visualizer.*.mediumVisualizer.displayCommunicationRanges = true
-*.visualizer.*.mediumVisualizer.displayInterferenceRanges = true
+*.visualizer.*.mediumVisualizer.displayCommunicationRanges = false
+*.visualizer.*.mediumVisualizer.displayInterferenceRanges = false
 
 # Show the difference between dataLink and route?
 #*.visualizer.*.dataLinkVisualizer.packetNameFilter = "*VoIP*"
@@ -378,7 +370,7 @@ network = VisualizationD
 
 
 [Config Visualization16]	# Displaying physical environment
-extends = Visualization15a
+extends = Visualization15b
 description = Displaying physical environment
 network = VisualizationE
 
@@ -397,6 +389,8 @@ network = VisualizationE
 extends = Visualization16
 description = Displaying obstacle loss
 
+# radio medium parameters
+*.radioMedium.obstacleLossType = "DielectricObstacleLoss"
 # visualizer parameters: shows obstacle loss
 *.visualizer.*.obstacleLossVisualizer.displayIntersectionTrail = true
 *.visualizer.*.obstacleLossVisualizer.displayFaceNormalVectorTrail = true
@@ -437,46 +431,53 @@ network = VisualizationF
 *.car[*].udpApp[0].localPort = 4000
 *.car[*].udpApp[0].serverAddress = "videoStreamServer"
 *.car[*].udpApp[0].serverPort = 4000
-*.car[*].wlan[0].agent.default_ssid = "inetwifi2"
+*.car[*].wlan[*].agent.default_ssid = ""
 
 # accessPoint2 mobility & wlan
-*.accessPoint2.mobility.initialLatitude = 42.357007deg
-*.accessPoint2.mobility.initialLongitude = -71.0657737deg
+*.accessPoint2.mobility.initialLatitude = 42.35613deg
+*.accessPoint2.mobility.initialLongitude = -71.06940deg
 *.accessPoint2.wlan[*].radio.transmitter.power = 1mW
-#*.accessPoint2.wlan[0].mgmt.ssid = "inetwifi2"
+*.accessPoint2.wlan[0].mgmt.ssid = "inetwifi2"
 
 # router2 mobility
 *.router2.mobility.initialLatitude = 42.3554667deg
 *.router2.mobility.initialLongitude = -71.0664122deg
 
 # accessPoint3 mobility & wlan
-*.accessPoint3.mobility.initialLatitude = 42.35617deg
-*.accessPoint3.mobility.initialLongitude = -71.06894deg
+*.accessPoint3.mobility.initialLatitude = 42.357007deg
+*.accessPoint3.mobility.initialLongitude = -71.0657737deg
 *.accessPoint3.wlan[*].radio.transmitter.power = 1mW
-#*.accessPoint3.wlan[0].mgmt.ssid = "inetwifi3"
+*.accessPoint3.wlan[0].mgmt.ssid = "inetwifi3"
 
-#-------------------------------------------------------------------
 # tcp hosts mobility and tcp application settings
 *.tcpHost[*].mobilityType = "StationaryMobility"
 *.tcpHost[*].mobility.coordinateSystemModule = "coordinateSystem"
-*.tcpHost[0].mobility.initialLatitude = 42.35292deg
-*.tcpHost[0].mobility.initialLongitude = -71.06473deg
+*.tcpHost[*].mobility.initialAltitude = 0.5m
+
 *.tcpHost[1].mobility.initialLatitude = 42.35332deg
 *.tcpHost[1].mobility.initialLongitude = -71.06455deg
 
-#-------------------------------------------------------------------
+*.tcpHost[0].mobility.initialLatitude = 42.35552deg
+*.tcpHost[0].mobility.initialLongitude = -71.06399deg
+
+**.tcpHost[*].numTcpApps = 2
+**.tcpHost[*].tcpApp[0].typename = "TCPSinkApp"
+
+**.tcpHost[*].tcpApp[1].typename = "TCPSessionApp"
+**.tcpHost[0].tcpApp[1].connectAddress = "tcpHost[1]"
+**.tcpHost[1].tcpApp[1].connectAddress = "tcpHost[0]"
 
 # turn off showing wifi association
 #*.visualizer.*.ieee80211Visualizer.nodeFilter = ""
 
-# turn off medium visualizer parameters
+# turn off propagating signals, because it makes the simulation slow
 *.visualizer.*.mediumVisualizer.displaySignals = false
 *.visualizer.*.mediumVisualizer.signalPropagationUpdateInterval = 0s
 
 # info visualizer parameters: shows channel access state
 *.visualizer.*.infoVisualizer.modules = ""
 
-# visualizer parameters
+# transport connection visualizer parameters
 *.visualizer.*.transportConnectionVisualizer.nodeFilter = "**"
 
 # ieee802.11 visualizer parameter
@@ -486,12 +487,23 @@ network = VisualizationF
 extends = Visualization19
 description = Showing link breaks
 
-# visualizer parameters
+# medium visualizer parameters
+#*.visualizer.*.mediumVisualizer.displayCommunicationRanges = false
+#*.visualizer.*.mediumVisualizer.displayInterferenceRanges = false
+
+# routing table visualizer: router0 all routing table entries
+*.visualizer.*.routingTableVisualizer.subscriptionModule = "car[0]"
+*.visualizer.*.routingTableVisualizer.destinationFilter = "**"
+
+# debugging, make the sim faster
+**.tcpHost[*].numTcpApps = 0
+# link break visualizer parameters
 *.visualizer.*.linkBreakVisualizer.nodeFilter = "**"
 
 
 [Config Visualization21]	# Visualizing handovers
 extends = Visualization20
 description = Visualizing handovers
+
 
 
