--- a/tutorials/visualization/omnetpp.ini
+++ b/tutorials/visualization/omnetpp.ini
@@ -8,13 +8,15 @@ record-eventlog = true
 description = Showing Boston downtown
 network = VisualizationA
 
-# coordinate system parameters
+# PARAMETERS
+# coordinate system
 *.coordinateSystem.playgroundLongitude = -71.070421deg
 *.coordinateSystem.playgroundLatitude = 42.357824deg
 *.coordinateSystem.playgroundAltitude = 0.1m
 *.coordinateSystem.playgroundHeading = 68.3deg
 
-# scene visualizer parameters
+# VISUALIZER
+# scene visualizer
 *.visualizer.osgVisualizer.sceneVisualizerType = "SceneOsgEarthVisualizer"
 *.visualizer.osgVisualizer.sceneVisualizer.mapFile = "boston.earth"
 *.visualizer.osgVisualizer.sceneVisualizer.playgroundShading = false
@@ -34,11 +36,13 @@ extends = Visualization02		#TODO: if Visualization02 became active change Visual
 description = Displaying communication & interference range
 network = VisualizationB
 
-# wlan parameters
+# PARAMETERS
+# wlan
 *.accessPoint0.wlan[*].radio.transmitter.power = 1mW
 *.pedestrian*.wlan[*].radio.transmitter.power = 0.7mW
 
-# medium visualizer parameters
+# VISUALIZER
+# medium visualizer
 *.visualizer.*.mediumVisualizer.displayCommunicationRanges = true
 *.visualizer.*.mediumVisualizer.displayInterferenceRanges = true
 
@@ -47,7 +51,10 @@ network = VisualizationB
 extends = Visualization03
 description = Using 3D models for network nodes
 
-# osgModel visualizer parameters
+# PARAMETERS
+
+# VISUALIZER
+# osgModel visualizer
 *.pedestrian0.osgModel = "boxman.osgb.(0.06).scale.0,0,90.rot" # external 3D animated osg model, I stole from "inet/examples/visualization/networknode/" folder
 *.pedestrian1.osgModel = "boxman.osgb.(0.06).scale.0,0,90.rot"
 
@@ -56,10 +63,11 @@ description = Using 3D models for network nodes
 extends = Visualization04
 description = Displaying recent movement
 
-# common mobility parameters
+# PARAMETERS
+# common mobility
 *.**.mobility.initFromDisplayString = false
 
-# pedestrians common initial parameters
+# pedestrians common initial
 *.pedestrian*.mobilityType = "MassMobility"
 *.pedestrian*.mobility.initialZ = 0.5m
 *.pedestrian*.mobility.constraintAreaMinZ = 0m
@@ -68,7 +76,7 @@ description = Displaying recent movement
 *.pedestrian*.mobility.changeAngleBy = uniform(-10deg, 10deg)
 *.pedestrian*.mobility.speed = 1.3mps
 
-# pedestrian0 mobility parameters
+# pedestrian0 mobility
 *.pedestrian0.mobility.initialX = 395m
 *.pedestrian0.mobility.initialY = 63m
 *.pedestrian0.mobility.constraintAreaMinX = 385m
@@ -76,7 +84,7 @@ description = Displaying recent movement
 *.pedestrian0.mobility.constraintAreaMaxX = 400m
 *.pedestrian0.mobility.constraintAreaMaxY = 230m
 
-# pedestrian1 mobility parameters
+# pedestrian1 mobility
 *.pedestrian1.mobility.initialX = 600m
 *.pedestrian1.mobility.initialY = 90m
 *.pedestrian1.mobility.constraintAreaMinX = 595m
@@ -84,14 +92,15 @@ description = Displaying recent movement
 *.pedestrian1.mobility.constraintAreaMaxX = 605m
 *.pedestrian1.mobility.constraintAreaMaxY = 230m
 
-# accessPoint0 mobility parameters
+# accessPoint0 mobility
 *.accessPoint*.mobilityType = "StationaryMobility"		# default, can be omitted 
 *.accessPoint*.mobility.coordinateSystemModule = "coordinateSystem"
 *.accessPoint0.mobility.initialLatitude = 42.3542933deg
 *.accessPoint0.mobility.initialLongitude = -71.0663985deg
 *.accessPoint*.mobility.initialAltitude = 0.5m
 
-# mobility visualizer parameters
+# VISUALIZER
+# mobility visualizer
 *.visualizer.*.mobilityVisualizer.displayVelocity = true
 *.visualizer.*.mobilityVisualizer.displayMovementTrail = true
 
@@ -100,7 +109,10 @@ description = Displaying recent movement
 extends = Visualization05
 description = Showing IP addresses
 
-# interface table visualizer: shows pedestrians' wlan ip addresses
+# PARAMETERS
+
+# VISUALIZER
+# interface table visualizer: it shows pedestrians' wlan ip addresses
 *.visualizer.*.interfaceTableVisualizer.nodeFilter = "*.pedestrian*"
 *.visualizer.*.interfaceTableVisualizer.interfaceFilter = "wlan*"
 
@@ -109,10 +121,13 @@ description = Showing IP addresses
 extends = Visualization06
 description = Showing wifi association
 
+# PARAMETERS
+
+# VISUALIZER
 # turn off interface table visualizer
 *.visualizer.*.interfaceTableVisualizer.nodeFilter = ""
 
-# ieee802.11 visualizer parameter
+# ieee802.11 visualizer: it shows wifi association
 *.visualizer.*.ieee80211Visualizer.nodeFilter = "**"
 
 
@@ -120,7 +135,8 @@ description = Showing wifi association
 extends = Visualization07
 description = Displaying transmissions & receptions, association off
 
-# voip application parameters
+# PARAMETERS
+# voip application
 *.pedestrian0.numUdpApps = 1
 *.pedestrian1.numUdpApps = 1
 
@@ -137,10 +153,11 @@ description = Displaying transmissions & receptions, association off
 *.pedestrian1.udpApp[0].typename = "SimpleVoIPReceiver"
 *.pedestrian1.udpApp[0].localPort = 5000
 
-# turn off ieee802.11 visualizer parameter???
+# VISUALIZER
+# turn off ieee802.11 visualizer???
 *.visualizer.*.ieee80211Visualizer.nodeFilter = ""
 
-# medium visualizer parameters: display transmissions and receptions
+# medium visualizer: it displays transmissions and receptions
 *.visualizer.*.mediumVisualizer.displayTransmissions = true
 *.visualizer.*.mediumVisualizer.displayReceptions = true
 *.visualizer.*.mediumVisualizer.transmissionImage = "transmission.png"
@@ -151,7 +168,8 @@ description = Displaying transmissions & receptions, association off
 extends = Visualization07
 description = Displaying transmissions & receptions, association on
 
-# voip application parameters
+# PARAMETERS
+# voip application
 *.pedestrian*.numUdpApps = 1
 
 # voip sender
@@ -168,7 +186,8 @@ description = Displaying transmissions & receptions, association on
 *.pedestrian1.udpApp[0].typename = "SimpleVoIPReceiver"
 *.pedestrian1.udpApp[0].localPort = 5000
 
-# medium visualizer parameters: display transmissions and receptions
+# VISUALIZER
+# medium visualizer: it displays transmissions and receptions
 *.visualizer.*.mediumVisualizer.displayTransmissions = true
 *.visualizer.*.mediumVisualizer.displayReceptions = true
 *.visualizer.*.mediumVisualizer.transmissionImage = "transmission.png"
@@ -179,7 +198,10 @@ description = Displaying transmissions & receptions, association on
 extends = Visualization08a
 description = Showing propagating signals
 
-# medium visualizer parameters
+# PARAMETERS
+
+# VISUALIZER
+# medium visualizer
 *.visualizer.*.mediumVisualizer.displaySignals = true
 *.visualizer.*.mediumVisualizer.signalPropagationUpdateInterval = 50ns
 #*.visualizer.osgVisualizer.mediumVisualizer.signalShape = "ring"
@@ -191,6 +213,9 @@ description = Showing propagating signals
 extends = Visualization09
 description = Showing active physical links
 
+# PARAMETERS
+
+# VISUALIZER
 # turn on physical links
 *.visualizer.*.physicalLinkVisualizer.packetNameFilter = "*"
 
@@ -199,6 +224,9 @@ description = Showing active physical links
 extends = Visualization10
 description = Showing active data links
 
+# PARAMETERS
+
+# VISUALIZER
 # turn off physical links
 *.visualizer.*.physicalLinkVisualizer.packetNameFilter = ""
 
@@ -210,7 +238,10 @@ description = Showing active data links
 extends = Visualization11
 description = Displaying throughput statistics
 
-# statistic visualizer parameters. Should change
+# PARAMETERS
+
+# VISUALIZER
+# statistic visualizer: Should change???
 *.visualizer.*.statisticVisualizer.signalName = "VoIPPacketLossRate"
 *.visualizer.*.statisticVisualizer.statisticName = "packetLossRate"
 *.visualizer.*.statisticVisualizer.prefix = "Packet loss"
@@ -223,7 +254,8 @@ extends = Visualization12
 description = Showing routing tables
 network = VisualizationC
 
-# pedestrianVideo wlan parameter
+# PARAMETERS
+# pedestrianVideo wlan
 *.pedestrianVideo.wlan[*].radio.transmitter.power = 0.7mW
 
 # initialize pedestrianVideo position
@@ -231,21 +263,21 @@ network = VisualizationC
 *.pedestrianVideo.mobility.initialX = 468m
 *.pedestrianVideo.mobility.initialY = 130m
 
-# router0 mobility settings
+# router0 mobility
 *.router*.mobilityType = "StationaryMobility"
 *.router*.mobility.coordinateSystemModule = "coordinateSystem"
 *.router0.mobility.initialLatitude = 42.35433deg
 *.router0.mobility.initialLongitude = -71.06550deg
 *.router*.mobility.initialAltitude = 0.5m
 
-#videoStreamServer mobility settings
+#videoStreamServer mobility
 *.videoStreamServer.mobilityType = "StationaryMobility"
 *.videoStreamServer.mobility.coordinateSystemModule = "coordinateSystem"
 *.videoStreamServer.mobility.initialLatitude = 42.3554005deg
 *.videoStreamServer.mobility.initialLongitude = -71.0637636deg
 *.*Server.mobility.initialAltitude = 0.5m
 
-# videoStreamServer application settings
+# videoStreamServer application
 *.videoStreamServer.numUdpApps = 1
 *.videoStreamServer.udpApp[0].typename = "UDPVideoStreamSvr"
 *.videoStreamServer.udpApp[0].localPort = 4000
@@ -253,7 +285,7 @@ network = VisualizationC
 *.videoStreamServer.udpApp[0].packetLen = 1000B
 *.videoStreamServer.udpApp[0].videoSize = 50000000B
 
-# client application parameters
+# client application
 *.pedestrianVideo.numUdpApps = 1
 *.pedestrianVideo.udpApp[0].typename = "UDPVideoStreamCli"
 *.pedestrianVideo.udpApp[0].localPort = 4000
@@ -262,18 +294,22 @@ network = VisualizationC
 # can be changed or can be omitted
 *.pedestrianVideo.udpApp[0].startTime = 15s
 
+# VISUALIZER
+# change displaying VoIP data links to displaying Videostream data links
+*.visualizer.*.dataLinkVisualizer.packetNameFilter = "*Video*"
+
 # routing table visualizer: router0 all routing table entries
 *.visualizer.*.routingTableVisualizer.subscriptionModule = "router0"
 *.visualizer.*.routingTableVisualizer.destinationFilter = "**"
-
-# turn on Videostream data links
-*.visualizer.*.dataLinkVisualizer.packetNameFilter = "*Video*"
 
 
 [Config Visualization14]	# Displaying 802.11 channel access state
 extends = Visualization13
 description = Displaying 802.11 channel access state
 
+# PARAMETERS
+
+# VISUALIZER
 # turn off statistic visualizer
 *.visualizer.*.statisticVisualizer.signalName = ""
 *.visualizer.*.statisticVisualizer.statisticName = ""
@@ -288,16 +324,17 @@ extends = Visualization14
 description = Showing active network routes
 network = VisualizationD
 
-# accessPoint1 settings
+# PARAMETERS
+# accessPoint1
 *.accessPoint1.wlan[*].radio.transmitter.power = 1mW
 *.accessPoint1.mobility.initialLatitude = 42.35324deg
 *.accessPoint1.mobility.initialLongitude = -71.06530deg
 
-# router1 mobility settings
+# router1 mobility
 *.router1.mobility.initialLatitude = 42.35351deg
 *.router1.mobility.initialLongitude = -71.06486deg
 
-# pedestrian1 mobility parameters. Changed because we placed a new access point
+# pedestrian1 mobility. Changed because we placed a new access point
 *.pedestrian1.mobility.initialX = 630m
 *.pedestrian1.mobility.initialY = 90m
 *.pedestrian1.mobility.constraintAreaMinX = 625m
@@ -305,18 +342,19 @@ network = VisualizationD
 *.pedestrian1.mobility.constraintAreaMaxX = 635m
 *.pedestrian1.mobility.constraintAreaMaxY = 230m
 
-# wifi parameters
+# accesspoint & pedestrians wifi
 *.accessPoint0.wlan[0].mgmt.ssid = "inetwifi0"
 *.accessPoint1.wlan[0].mgmt.ssid = "inetwifi1"
 *.pedestrian0.wlan[0].agent.default_ssid = "inetwifi0"
 *.pedestrianVideo.wlan[0].agent.default_ssid = "inetwifi0"
 *.pedestrian1.wlan[0].agent.default_ssid = "inetwifi1"
 
+# VISUALIZER
 # turn off routing table
 *.visualizer.*.routingTableVisualizer.subscriptionModule = ""
 *.visualizer.*.routingTableVisualizer.destinationFilter = ""
 
-# turn off ranges
+# turn off ranges: too many devices on the playground
 *.visualizer.*.mediumVisualizer.displayCommunicationRanges = false
 *.visualizer.*.mediumVisualizer.displayInterferenceRanges = false
 
@@ -333,16 +371,17 @@ extends = Visualization14
 description = Showing active network routes
 network = VisualizationD
 
-# accessPoint1 settings
+# PARAMETERS
+# accessPoint1
 *.accessPoint1.wlan[*].radio.transmitter.power = 1mW
 *.accessPoint1.mobility.initialLatitude = 42.35324deg
 *.accessPoint1.mobility.initialLongitude = -71.06530deg
 
-# router1 mobility settings
+# router1 mobility
 *.router1.mobility.initialLatitude = 42.35351deg
 *.router1.mobility.initialLongitude = -71.06486deg
 
-# pedestrian1 mobility parameters. Changed because we placed a new access point
+# pedestrian1 mobility: Changed because we placed a new access point
 *.pedestrian1.mobility.initialX = 630m
 *.pedestrian1.mobility.initialY = 90m
 *.pedestrian1.mobility.constraintAreaMinX = 625m
@@ -350,13 +389,14 @@ network = VisualizationD
 *.pedestrian1.mobility.constraintAreaMaxX = 635m
 *.pedestrian1.mobility.constraintAreaMaxY = 230m
 
-# wifi parameters
+# accessPoints & pedestrians wifi
 *.accessPoint0.wlan[0].mgmt.ssid = "inetwifi0"
 *.accessPoint1.wlan[0].mgmt.ssid = "inetwifi1"
 *.pedestrian0.wlan[0].agent.default_ssid = "inetwifi0"
 *.pedestrianVideo.wlan[0].agent.default_ssid = "inetwifi0"
 *.pedestrian1.wlan[0].agent.default_ssid = "inetwifi1"
 
+# VISUALIZER
 # turn off routing table
 *.visualizer.*.routingTableVisualizer.subscriptionModule = ""
 *.visualizer.*.routingTableVisualizer.destinationFilter = ""
@@ -374,7 +414,8 @@ extends = Visualization15b
 description = Displaying physical environment
 network = VisualizationE
 
-# physical environment parameters
+# PARAMETERS
+# physical environment
 *.physicalEnvironment.coordinateSystemModule = "coordinateSystem"
 *.physicalEnvironment.spaceMinX = 0m
 *.physicalEnvironment.spaceMinY = 0m
@@ -384,14 +425,18 @@ network = VisualizationE
 *.physicalEnvironment.spaceMaxZ = 100m
 *.physicalEnvironment.config = xmldoc("obstacle.xml")
 
+# VISUALIZER
 
 [Config Visualization17]	# Displaying obstacle loss			# under construction: signal doesn't conflict obstacles
 extends = Visualization16
 description = Displaying obstacle loss
 
+# PARAMETERS
 # radio medium parameters
 *.radioMedium.obstacleLossType = "DielectricObstacleLoss"
-# visualizer parameters: shows obstacle loss
+
+# VISUALIZER
+# obstacle loss visualizer: shows obstacle loss
 *.visualizer.*.obstacleLossVisualizer.displayIntersectionTrail = true
 *.visualizer.*.obstacleLossVisualizer.displayFaceNormalVectorTrail = true
 
@@ -400,15 +445,19 @@ description = Displaying obstacle loss
 extends = Visualization17
 description = Showing packet drops
 
+# PARAMETERS
+
+# VISUALIZER
 # visualizer parameters
 *.visualizer.*.packetDropVisualizer.packetNameFilter = "**"
 
 
-[Config Visualization19]	# Displaying transport connections	# under construction: need tcp connection?
+[Config Visualization19]	# Displaying transport connections
 extends = Visualization18
 description = Displaying transport connections
 network = VisualizationF
 
+# PARAMETERS
 # car appearance
 *.car[*].osgModel = "car.osgb.20.scale"
 *.car[*].osgModelColor = "#CB4154"
@@ -434,14 +483,18 @@ network = VisualizationF
 *.car[*].wlan[*].agent.default_ssid = ""
 
 # accessPoint2 mobility & wlan
-*.accessPoint2.mobility.initialLatitude = 42.35613deg
-*.accessPoint2.mobility.initialLongitude = -71.06940deg
+*.accessPoint2.mobility.initialLatitude = 42.35606deg
+*.accessPoint2.mobility.initialLongitude = -71.06935deg
 *.accessPoint2.wlan[*].radio.transmitter.power = 1mW
 *.accessPoint2.wlan[0].mgmt.ssid = "inetwifi2"
 
 # router2 mobility
 *.router2.mobility.initialLatitude = 42.3554667deg
 *.router2.mobility.initialLongitude = -71.0664122deg
+
+# router3 mobility
+*.router3.mobility.initialLatitude =  42.3558974deg
+*.router3.mobility.initialLongitude = -71.065796deg
 
 # accessPoint3 mobility & wlan
 *.accessPoint3.mobility.initialLatitude = 42.357007deg
@@ -467,36 +520,34 @@ network = VisualizationF
 **.tcpHost[0].tcpApp[1].connectAddress = "tcpHost[1]"
 **.tcpHost[1].tcpApp[1].connectAddress = "tcpHost[0]"
 
-# turn off showing wifi association
-#*.visualizer.*.ieee80211Visualizer.nodeFilter = ""
-
+# VISUALIZER
 # turn off propagating signals, because it makes the simulation slow
 *.visualizer.*.mediumVisualizer.displaySignals = false
 *.visualizer.*.mediumVisualizer.signalPropagationUpdateInterval = 0s
 
-# info visualizer parameters: shows channel access state
+# turn off showing channel access state
 *.visualizer.*.infoVisualizer.modules = ""
 
-# transport connection visualizer parameters
+# debugging: routing table visualizer: car[*] all routing table entries
+*.visualizer.*.routingTableVisualizer.subscriptionModule = "car[*]"
+*.visualizer.*.routingTableVisualizer.destinationFilter = "**"
+
+# shows wifi association
+*.visualizer.*.ieee80211Visualizer.nodeFilter = "**"
+
+# transport connection visualizer
 *.visualizer.*.transportConnectionVisualizer.nodeFilter = "**"
 
-# ieee802.11 visualizer parameter
-*.visualizer.*.ieee80211Visualizer.nodeFilter = "**"
 
 [Config Visualization20]	# Showing link breaks
 extends = Visualization19
 description = Showing link breaks
 
-# medium visualizer parameters
-#*.visualizer.*.mediumVisualizer.displayCommunicationRanges = false
-#*.visualizer.*.mediumVisualizer.displayInterferenceRanges = false
-
-# routing table visualizer: router0 all routing table entries
-*.visualizer.*.routingTableVisualizer.subscriptionModule = "car[0]"
-*.visualizer.*.routingTableVisualizer.destinationFilter = "**"
-
-# debugging, make the sim faster
+# PARAMETERS
+# debugging: make the simulation faster. If all devices works, turn it on
 **.tcpHost[*].numTcpApps = 0
+
+# VISUALIZER
 # link break visualizer parameters
 *.visualizer.*.linkBreakVisualizer.nodeFilter = "**"
 
