--- a/examples/inet/udpburst/omnetpp.ini
+++ b/examples/inet/udpburst/omnetpp.ini
@@ -1,4 +1,10 @@
 [General]
+
+**.hasIpv4 = false
+**.hasIpv6 = false
+**.hasGn =   true
+**.networkLayerType = "GenericNetworkLayer"
+
 network = UDPBurst
 #debug-on-errors = true
 total-stack = 7MiB
